test/Fail/Issue7823b.err
Issue7823b.agda:12.5-9: error: [UnequalTerms]
Nat !=< P (suc zero)
when checking that the expression zero has type P (suc zero)
